--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,8 +133,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release_macos.outputs.upload_url }}
-          asset_path: ./laba3-0.0.${{ github.run_number }}-Darwin.zip
-          asset_name: laba3-0.0.${{ github.run_number }}-Darwin.zip
+          asset_path: ./laba3-0.0.${{ github.run_number }}-Windows.zip
+          asset_name: laba3-0.0.${{ github.run_number }}-Windows.zip
           asset_content_type: application/zip
 
     
