--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,7 +132,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release_macos.outputs.upload_url }}
+          upload_url: ${{ steps.create_release_windows.outputs.upload_url }}
           asset_path: ./laba3-0.0.${{ github.run_number }}-Windows.zip
           asset_name: laba3-0.0.${{ github.run_number }}-Windows.zip
           asset_content_type: application/zip
